@startuml SportLink

class Utilisateur {
  - {field} nomUtilisateur : String
  - {field} prenom : String
  - {field} nom : String
  - {field} courriel : String
  - {field} motDePasse : String
  - {field} dateDeNaissance : String
}

class ProfilUtilisateurVueModele {
  - {field} utilisateur : Utilisateur
  - {field} estEnChargement : Bool
  + {method} modifierMotDePasse(nouveauMotDePasse : String) : void
  + {method} chargerUtilisateur() : void
}

class ProfilUtilisateurVue {
  - vueModele : ProfilUtilisateurVueModele
}

ProfilUtilisateurVueModele "1" --* "1" Utilisateur
ProfilUtilisateurVue ..> ProfilUtilisateurVueModele

class Activite {
  - {field} id : UUID
  - {field} sport : Sport
  - {field} intervalleDate : DateInterval 
  - {field} placesDisponibles : Integer
  - {field} niveau : Niveau
  - {field} coordonnees : CLLocationCoordinate2D
}

enum Niveau {
  Debutant
  Intermediaire
  Avance
}

enum Sport {
  Basketball
  Soccer
  Volleyball
  Baseball
  Tennis
  Badminton
  Pickleball
  Waterpolo
  Football
  Rugby
  Ultimate
  Hockey
}


@enduml